Attach bindings via addBinding even to nodes not in a document.  Bug 380990, r+sr=sicking